# pyO3test

./: .gitignore  Cargo.toml  README.md  setup.py
.github/workflows/: ci.yml
py03test/: __init__.py
src/: lib.rs  main.rs
testdir/: run.py
